--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <title>Title</title>
+    <title>Groovy</title>
 </head>
 <body>
 <div id="wrap">
@@ -24,6 +24,6 @@
     </div>
 </div>
 <script src="/js/main.js" type="module"></script>
-<script src="/js/login.js"></script>
+<script src="/js/login.js" type="text/javascript"></script>
 </body>
 </html>
